kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: entity-escaper
  labels:
    app: entity-escaper
