kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entity-escaper-svc
  namespace: entity-escaper
  labels:
    app: entity-escaper
spec:
  type: ClusterIP
  selector:
    app: entity-escaper
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
